[package]
name = "dolphin"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
local-ip-address = "0.6.1"
mdns-sd = "0.11.0"
objc2 = "0.5.2"
objc2-core-location = {version = "0.2.2", features = ["CLLocationManager"]}
objc2-core-wlan = { version = "0.2.2", features = ["CWNetwork", "CWWiFiClient", "CWInterface"] }
objc2-foundation = { version = "0.2.2", features = ["all"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = "0.3.18"
